--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,9 @@
     <groupId>com.avispl.symphony.dal.device.biamp.sagevue</groupId>
     <artifactId>symphony-dal-communicator-biamp-sagevue</artifactId>
     <version>0.2.16-SNAPSHOT</version>
+    <properties>
+        <symphonyApiVersion>4.9.0</symphonyApiVersion>
+    </properties>
     <build>
         <plugins>
             <plugin>
@@ -91,21 +94,21 @@
         <dependency>
             <groupId>com.avispl.symphony.api</groupId>
             <artifactId>symphony-api-dal</artifactId>
-            <version>4.9.0</version>
+            <version>${symphonyApiVersion}</version>
             <scope>system</scope>
             <systemPath>${basedir}/lib/symphony-api-dal-4.9.0.jar</systemPath>
         </dependency>
         <dependency>
             <groupId>com.avispl.symphony.dal</groupId>
             <artifactId>symphony-dal-commons</artifactId>
-            <version>4.9.0</version>
+            <version>${symphonyApiVersion}</version>
             <scope>system</scope>
             <systemPath>${basedir}/lib/symphony-dal-commons-4.9.0.jar</systemPath>
         </dependency>
         <dependency>
             <groupId>com.avispl.symphony.api</groupId>
             <artifactId>symphony-api-commons</artifactId>
-            <version>4.9.0</version>
+            <version>${symphonyApiVersion}</version>
             <scope>system</scope>
             <systemPath>${basedir}/lib/symphony-api-commons-4.9.0.jar</systemPath>
         </dependency>
