--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -16,7 +16,7 @@ jobs:
     - name: Build and test with Maven
       run: mvn -B clean test install -DskipTests
     - id: getfilename
-      run: echo "::set-output name=file::$(ls target/symphony-dal-communicator-biamp-sagevue-*-SNAPSHOT.jar)"
+      run: echo "::set-output name=file::$(ls target/symphony-dal-communicator-biamp-sagevue-[0-9].[0-9].[0-9].jar)"
     - uses: actions/upload-artifact@v1
       with:
         name: BiampSageVue
