--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.avispl.symphony.dal.device.biamp.sagevue</groupId>
     <artifactId>symphony-dal-communicator-biamp-sagevue</artifactId>
-    <version>1.0.0</version>
+    <version>1.0.1</version>
     <properties>
         <symphonyApiVersion>RELEASE</symphonyApiVersion>
     </properties>
@@ -74,6 +74,15 @@
                 </executions>
             </plugin>
         </plugins>
+        <resources>
+            <resource>
+                <directory>src/main/resources/plugins</directory>
+                <excludes>
+                    <exclude>*</exclude>
+                </excludes>
+                <filtering>false</filtering>
+            </resource>
+        </resources>
     </build>
     <reporting>
         <plugins>
