SYM-188 Adjust device adapters that were using nashorn engine for properties mapping to use SPeL

--- a/src/main/resources/sagevue/model-mapping.yml
+++ b/src/main/resources/sagevue/model-mapping.yml
@@ -48,3 +48,4 @@ models:
           type: DropDown
           options: get("AvailableFirmwareVersions")
           labels: get("AvailableFirmwareVersions")
+          value: get("FirmwareVersion")
