--- a/src/main/resources/sagevue/model-mapping.yml
+++ b/src/main/resources/sagevue/model-mapping.yml
@@ -4,14 +4,14 @@ models:
       node: TesiraDevices
       vendor: biamp
       properties:
-        FirmwareVersion: FirmwareVersion
-        isControlled: IsControlled
-        isProtected: IsProtected
+        FirmwareVersion: get("FirmwareVersion")
+        isControlled: get("IsControlled")
+        isProtected: get("IsProtected")
       mapping:
-        deviceModel: ModelDescription
-        deviceId: SystemId
-        deviceOnline: Status
-        serialNumber: SerialNumber
+        deviceModel: get("ModelDescription")
+        deviceId: get("SystemId")
+        deviceOnline: get("Status").asText().equals("0")
+        serialNumber: get("SerialNumber")
   - model:
       name: Tesira
       vendor: biamp
