SYAL-271 Optimization for Biamp
- Concurrent device details requests
- Upgraded mapping approach

--- a/src/test/resources/sagevue/model-mapping.yml
+++ b/src/test/resources/sagevue/model-mapping.yml
@@ -1,19 +1,21 @@
 models:
   - model:
       name: generic
-      node: TesiraDevices
       vendor: biamp
+      filter: true
       properties:
-        FirmwareVersion: FirmwareVersion
-        isControlled: IsControlled
-        isProtected: IsProtected
+        FirmwareVersion: get("FirmwareVersion")
+        isControlled: get("IsControlled")
+        isProtected: get("IsProtected")
+        ipAddress: get("IpAddress")
       mapping:
-        deviceModel: ModelDescription
-        deviceId: SystemId
-        deviceOnline: Status
-        serialNumber: SerialNumber
+        deviceModel: get("Model")
+        deviceName: get("ModelDescription")
+        deviceId: get("SystemId")
+        deviceOnline: get("Status")
+        serialNumber: get("SerialNumber")
   - model:
-      name: Tesira
+      name: FORTE_VT
       vendor: biamp
       filter: get("Model").asText().equals("FORTE_VT")
       properties:
@@ -28,8 +30,8 @@ models:
         deviceFaults: "get(\"Faults\").asText().length() == 0 ? \"None\" : get(\"Faults\")"
       mapping:
         deviceMake: Biamp
-        deviceName: TesiraFORTÉ
-        deviceModel: get("ModelDescription")
+        deviceModel: get("Model")
+        deviceName: get("ModelDescription")
         deviceId: get("SystemId")
         deviceOnline: get("Status").asText().equals("0")
         serialNumber: get("SerialNumber")
