--- a/src/main/resources/sagevue/model-mapping.yml
+++ b/src/main/resources/sagevue/model-mapping.yml
@@ -1,19 +1,21 @@
 models:
   - model:
       name: generic
-      node: TesiraDevices
       vendor: biamp
+      filter: true
       properties:
         FirmwareVersion: get("FirmwareVersion")
         isControlled: get("IsControlled")
         isProtected: get("IsProtected")
+        ipAddress: get("IpAddress")
       mapping:
-        deviceModel: get("ModelDescription")
+        deviceModel: get("Model")
+        deviceName: get("ModelDescription")
         deviceId: get("SystemId")
-        deviceOnline: get("Status").asText().equals("0")
+        deviceOnline: get("Status")
         serialNumber: get("SerialNumber")
   - model:
-      name: Tesira
+      name: FORTE_VT
       vendor: biamp
       filter: get("Model").asText().equals("FORTE_VT")
       properties:
@@ -29,6 +31,7 @@ models:
       mapping:
         deviceMake: Biamp
         deviceName: TesiraFORTÉ
+        deviceType: Audio DSP
         deviceModel: get("ModelDescription")
         deviceId: get("SystemId")
         deviceOnline: get("Status").asText().equals("0")
